--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dompurify": "^3.1.4",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "mongoose": "^8.4.0"
+    "jsdom": "^24.0.0",
+    "marked": "^12.0.2",
+    "method-override": "^3.0.0",
+    "mongodb": "^6.6.2",
+    "mongoose": "^8.4.0",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
